--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,17 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   material_symbols_icons: ^4.2777.1
+
   flutter_localizations:
     sdk: flutter
   intl: any
-
+  
   universal_io: ^2.2.2
+  shared_preferences: ^2.3.2
+  
+  json_annotation: ^4.9.0
+
+  freezed_annotation: ^2.4.4
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +58,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+
+  build_runner: ^2.4.12
+
+  json_serializable: ^6.8.0
+
+  freezed: ^2.5.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
