--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,8 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Generated files
+lib/**/*.freezed.dart
+lib/**/*.g.dart
+
