--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
 
   freezed_annotation: ^2.4.4
   provider: ^6.1.2
+  built_collection: ^5.1.1
 
 dev_dependencies:
   flutter_test:
