Configure managing data method

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,5 +14,15 @@
                 "chrome",
             ]
         },
+        {
+            "name": "Flutter for MacOS",
+            "request": "launch",
+            "type": "dart",
+            "program": "lib/main.dart",
+            "args": [
+                "-d",
+                "macos",
+            ]
+        },
     ]
 }
