--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   freezed_annotation: ^2.4.4
   provider: ^6.1.2
   built_collection: ^5.1.1
+  uuid: ^4.5.0
 
 dev_dependencies:
   flutter_test:
