--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   built_collection: ^5.1.1
   uuid: ^4.5.0
   intersperse: ^2.0.0
+  intl_translation: ^0.20.0
 
 dev_dependencies:
   flutter_test:
@@ -86,7 +87,6 @@ flutter:
   assets:
     - assets/images/
     - assets/images/items/
-    - assets/languages/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
