--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   uuid: ^4.5.0
   intersperse: ^2.0.0
   intl_translation: ^0.20.0
+  styled_text: ^8.1.0
 
 dev_dependencies:
   flutter_test:
