--- a/.github/workflows/deploy_by_tag.yml
+++ b/.github/workflows/deploy_by_tag.yml
@@ -13,16 +13,19 @@ jobs:
       uses: actions/checkout@v4.2.2
       with: 
         ref: ${{ github.ref_name }}
+    - name: Flutter action
+      uses: subosito/flutter-action@v2.18.0
+      with:
+        channel: stable
+    - run: flutter --version
     - name: Build for web release
       env:
         BASE_HREF: "/DST-Helper-web/"
-      run: flutter build web --base-href "${BASE_HREF}"
+      run: |
+        flutter pub get
+        flutter build web --base-href "${BASE_HREF}"
     - name: Move to build dir for web
       run: cd build/web
-    # - name: Commit the result of build
-    #   env:
-    #     COMMIT_MESSAGE: "Deploy ${{ github.ref_name }}"
-    #   run: git add . && git commit -m "${COMMIT_MESSAGE}"
     - name: Push directory to another repository
       uses: cpina/github-action-push-to-another-repository@v1.7.2
       env:
