Add toast for interaction of users' action

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   intersperse: ^2.0.0
   intl_translation: ^0.20.0
   styled_text: ^8.1.0
+  toastification: ^2.3.0
 
 dev_dependencies:
   flutter_test:
