Update task descriptions for clarity

--- a/mise.toml
+++ b/mise.toml
@@ -1,7 +1,7 @@
 [tasks.deploy-web-testing]
-description = 'Deploy testing version with a testing repository.'
+description = 'Deploy testing version with a testing repository. | [--m <commit_message>]'
 run = 'flutter build web --base-href "/DST-Helper-web-testing/" && cd build/web && git add . && git commit -m {{option(name="m")}} && git push testing main'
 
 [tasks.run-web-release]
-description = 'Run for web server with given ip-address on release.'
+description = 'Run for web server with given ip-address on release. | [ip_address]'
 run = 'flutter run -d web-server --web-hostname {{arg()}} --web-port 8080 --release'
