--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,7 +28,7 @@
             "name": "Flutter(example) for MacOS",
             "request": "launch",
             "type": "dart",
-            "program": "lib/example/main.dart",
+            "program": "example/main.dart",
             "args": [
                 "-d",
                 "macos",
