--- a/mise.toml
+++ b/mise.toml
@@ -18,7 +18,10 @@ run = 'flutter run -d web-server --web-hostname {{arg()}} --web-port 8080 --rele
 
 [tasks.extract_to_arb]
 description = 'Generate a `.arb` file from `l10ns.dart`'
-run = 'dart run intl_translation:extract_to_arb --output-dir lib/l10n/arbs lib/l10n/l10ns.dart'
+run = '''
+dart run intl_translation:extract_to_arb --output-dir lib/l10n/arbs lib/l10n/l10ns.dart
+open -a /Applications/Visual\ Studio\ Code.app lib/l10n/arbs/intl_messages.arb
+'''
 
 [tasks.generate_from_arb]
 description = 'Generate message lookup classes from `.arb` translation files'
