--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -10,7 +10,10 @@
 include: package:flutter_lints/flutter.yaml
 
 analyzer:
-  exclude: [lib/**.freezed.dart, lib/**.g.dart]
+  exclude:
+    - lib/**.freezed.dart
+    - lib/**.g.dart
+    - lib/l10n/gen
 
 linter:
   # The lint rules applied to this project can be customized in the
@@ -29,6 +32,7 @@ linter:
     prefer_final_locals: true
     # prefer_final_parameters: true
     prefer_final_in_for_each: true
+    always_declare_return_types: true
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
 # Additional information about this file can be found at
