Make debugging entry point concise

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: dst_helper
 description: "Don't Starve Together Helper Application."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 0.1.0+1
 
 environment:
-  sdk: '>=3.4.4 <4.0.0'
+  sdk: ">=3.4.4 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -40,10 +40,11 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: any
-  
+
   universal_io: ^2.2.2
   shared_preferences: ^2.3.2
-  
+  shared_preferences_platform_interface: ^2.4.1
+
   json_annotation: ^4.9.0
 
   freezed_annotation: ^2.4.4
@@ -72,14 +73,12 @@ dev_dependencies:
   json_serializable: ^6.8.0
 
   freezed: ^2.5.7
-  shared_preferences_platform_interface: ^2.4.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
-
   generate: true
 
   # The following line ensures that the Material Icons font is
@@ -105,7 +104,7 @@ flutter:
   # example:
   fonts:
     - family: CustomIcon
-      fonts: 
+      fonts:
         - asset: assets/custom_icon/CustomIcon.ttf
     - family: Pretendard
       fonts:
